# Test

./: dump.rdb
Test/: .gitignore  main.py  pyproject.toml  pyvenv.cfg  redis.conf
Test/project/: a.out  db.sqlite3  tempp.py
Test/project/Register/: admin.py  apps.py  models.py  urls.py
Test/project/app1/: CombindCode.py  DriverCode.py  ExecuteCode.py  Generate_flushed_code.py  Task.py  admin.py  code_exicution.py  demo.py  models.py  problem _id_2.json  problem_id_1.json  problem_id_3.json  python_wafer.py  request_response.py  serializers.py  testcase.json  urls.py  userdataupdate.py  views.py  workers.py
Test/project/app1/migrations/: 0001_initial.py  0002_user_submission_table_and_more.py
Test/project/media/submissions/: demo_ZkqbHXS.py
Test/project/media/testcase/: problem__id_2.json  problem__id_2_9QKOVXZ.json  problem__id_2_HBJ5KUw.json  problem__id_2_eCFNu5M.json  problem__id_2_kfjfiSy.json  problem_id_1.json  problem_id_1_TIfNhhw.json  problem_id_3.json  problem_id_3_EPOpvz0.json  problem_id_3_EwzONvs.json  problem_id_3_LHBDR5S.json  problem_id_3_jmUJpmJ.json  problem_id_3_nbxhxAJ.json  problem_id_3_sDmXFpz.json  problem_id_3_tnu4Dot.json  problem_id_3_ujGrbG4.json  testcase.json  testcase.py  testcase.txt  testcase_dh5gcQW.json  testcase_ukvtNAJ.json  testcase_xqTKk8C.json
Test/project/project/: settings.py  urls.py
Test/project/registation/: apps.py  models.py
appendonlydir/: appendonly.aof.1.base.rdb
